tests/ui/transmute-size-decrease.msrv.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-size-decrease.rs:18:27
   |
18 | const DECREASE_SIZE: u8 = transmute!(AU16(0));
   |                           ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
